# mem-coin

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_metadata_text.py
backend/app/: config.py  db.py  main.py
backend/app/api/: filters.py  tokens.py  ws.py
backend/app/models/: __init__.py  pool.py  price_snapshot.py  saved_filter.py  token.py
backend/app/schemas/: __init__.py
backend/app/services/: filter_engine.py  price_oracle.py  pumpfun_client.py  raydium_client.py  solana_rpc.py
backend/app/tasks/: celery_app.py  discover_new.py  publisher.py  refresh_pools.py
backend/tests/: test_filter_engine.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/tokens/[mint]/: page.tsx
web/components/: FilterPanel.tsx  LivePulse.tsx  TokenTable.tsx
web/lib/: api.ts  ws.ts
